--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -16,16 +16,16 @@
                 <td> {{ contact.pk }}</td>
                 <td>{{ contact.name }}</td>
                 <td>{{ contact.email }}</td>
-                {% if request.user|has_group:"Admin" or request.user.is_superuser %}
-                <td><a class="btn btn-danger" href={% url 'contacts:delete_contact' pk=contact.pk%}>Delete</a>
+                {% if request.user.is_superuser or request.user|has_group:"Admin" %}
+                    <td><a class="btn btn-danger" href={% url 'contacts:delete_contact' pk=contact.pk%}>Delete</a></td>
                 {% endif %}
-            </td>
+            </tr>
         {% endfor %}
         </table>
     {% else %}
         <p>Contacts list is empty</p>
     {% endif %}
-    {% if not request.user|has_group:"Viewer" %}
+    {% if request.user|has_group:"Admin" or request.user|has_group:"Editor" or request.user.is_superuser  %}
         <p><a class="btn btn-primary" href={% url 'contacts:create_contact' %}>Create new contact</a></p>
     {% endif %}
 {% endblock %}
