--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -6,7 +6,8 @@
     {% if contact_list %}
         <table class="table">
             <th>Record ID</th>
-            <th>Name</th>
+            <th>First Name</th>
+            <th>Last Name</th>
             <th>Email</th>
             {% if request.user|has_group:"Admin" or request.user.is_superuser %}
                 <th>Action</th>
@@ -14,7 +15,8 @@
         {% for contact in contact_list %}
             <tr>
                 <td> {{ contact.pk }}</td>
-                <td>{{ contact.name }}</td>
+                <td>{{ contact.first_name }}</td>
+                <td>{{ contact.last_name }}</td>
                 <td>{{ contact.email }}</td>
                 {% if request.user.is_superuser or request.user|has_group:"Admin" %}
                     <td><a class="btn btn-danger" href={% url 'contacts:delete_contact' pk=contact.pk%}>Delete</a></td>
